--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>this is my first github</h1>
     <h2>Look mama, I am using github</h2>
+    <h2>yes i made it</h2>
 </body>
 </html>
