--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>this is my first github</h1>
     <h2>Look mama, I am using github</h2>
     <h2>yes i made it</h2>
+    <p>lets go for a party</p>
 </body>
 </html>
