--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Look mama, I am using github</h2>
     <h2>yes i made it</h2>
     <p>lets go for a party</p>
+    <img src="flag.jpg" alt="">
 </body>
 </html>
