--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h2>Look mama, I am using github</h2>
     <h2>yes i made it</h2>
     <p>lets go for a party</p>
+    <P>taking from the second branch</P>
+    <p>this line added in my second branch</p>
     <img src="flag.jpg" alt="">
 </body>
 </html>
