adding more code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>lets go for a party</p>
     <P>taking from the second branch</P>
     <p>this line added in my second branch</p>
+    <p>added more code in second branch</p>
     <img src="flag.jpg" alt="">
 </body>
 </html>
